--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -13,7 +13,7 @@ COPY requirements.txt .
 # Установка зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копируем только необходимые файлы (например, код)
+# Копируем только необходимые файлы
 COPY src/ ./src
 
 # Устанавливаем рабочую директорию для запуска приложения
